# egress-filter

./: .gitignore  AUDIT.md  CLAUDE.md  DESIGN-REVIEW.md  README.md  TODO.md  action.yml  main.py  mitmproxy_wg_logger.py  package-lock.json  package.json  proxy.py  pyproject.toml  test_connections.py  test_ipv6_blocker.py  test_mitmproxy_connections.py  unified_proxy.py
.github/workflows/: build-action.yml  check-deps.yml  debug-mitmproxy-dns.yml  test-baseline.yml  test-dns-block.yml  test-mitmproxy-wireguard.yml  test-mitmproxy.yml  test-netns-bypass.yml  test-policy-cli.yml  test-proxy-restart.yml  test-raw-socket-bypass.yml  test-tailscale.yml  test-tls-failure-logging.yml  test-transparent-proxy.yml  test.yml
docs/: POLICY.md  policy-syntax-design.md  policy-syntax-grammar.peg
scripts/: cleanup-iptables.sh  setup-proxy.sh
src/action/: main.js  post.js  pre.js
src/bpf/: conn_tracker.bpf.c  ipv6_blocker.bpf.c  port_tracker.bpf.c
src/proxy/: bpf.py  control.py  main.py  proc.py  unified_proxy.py
src/proxy/handlers/: mitmproxy.py  nfqueue.py
src/proxy/policy/: __init__.py  cli.py  defaults.py  dns_cache.py  enforcer.py  gha.py  matcher.py  parser.py  types.py
src/scripts/: setup-proxy.sh
src/setup/: proxy.sh  supervisor.sh
tests/: test_pid_tracking.sh  test_policy.py  test_policy_cli.py  test_policy_defaults.py  test_policy_enforcer.py  test_policy_grammar.py  test_policy_properties.py
tests/fixtures/: policy_enforcer.yaml  policy_flatten.yaml  policy_match.yaml
